# kdf-validator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml
conformance/edge/: e001_drift_needs_review.json  e002_source_version_change.json  e003_conflicting_atoms.json
conformance/invalid/: i001_atom_without_evidence.json  i002_broken_span.json  i003_missing_source_hash.json  i004_invalid_node_path.json  i005_inferred_atom.json  i006_invalid_evidence_validation.json  i007_path_chain_not_real.json  i008_duplicate_atom_id.json
conformance/valid/: v001_minimal_valid.json  v002_atoms_with_evidence.json  v003_structural_hierarchy.json  v004_evidence_with_anchors.json  v005_hash_and_fp_determinism.json
kdf_validator/: __init__.py  cli.py  tools.py  validator.py
kdf_validator/schema/: kdf_v0_1.schema.json
