[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kdf-validator"
version = "0.1.2"
description = "Reference validator and conformance runner for KDF v0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.22.0"
]

[project.scripts]
kdf = "kdf_validator.cli:main"

[tool.setuptools.packages.find]
include = ["kdf_validator*"]

[tool.setuptools.package-data]
kdf_validator = ["schema/*.json"]
